[package]
name = "timebar"
description = "Cli to get some time progress bars on a terminal."
license = "MIT"
version = "0.1.3"
authors = ["Sung Kwon <mailtosungkwon@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/sungyeonkwon/timebar"
keywords = ["timebar", "progress", "timer", "cli", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
termion = "1.5.5"
