[package]
name = "timebar"
description = "CLI for time progress bars on your terminal."
license = "MIT"
version = "0.2.3"
authors = ["Sung Kwon <mailtosungkwon@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/sungyeonkwon/timebar"
keywords = ["time", "progress", "timer", "cli", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
termion = "1.5.5"
preferences = "1.1.0"
serde_derive = "0.9.6"
serde = "0.9.6"
